# rust-6502-emu

./: Cargo.toml  README.md  TODO.md
.github/workflows/: cargo.yml
examples/: Makefile  README.md  add.asm  basic_01.s  fibonacci.s  rust-6502-emu.cfg
src/: cpu.rs  instruction.rs  lib.rs  main.rs  mem.rs
